force-app/main/default/objects/Person_Communication__c/Person_Communication__c.object-meta.xml
<CustomObject>
    <label>Person Communication</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Person Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>