force-app/main/default/objects/Person_Communication__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Master-details relationship to Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Person Communications</relationshipLabel>
    <relationshipName>Person_Communications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>