force-app/main/default/objects/Person_Communication__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This stores the Extension for phone number</description>
    <label>Extension</label>
    <length>5</length>
    <type>Text</type>
</CustomField>