force-app/main/default/objects/Person_Communication__c/fields/Social_Media_Handler__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Handler__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This will hold the social media user id corresponding to the subtype value</description>
    <label>Social Media Handler</label>
    <length>100</length>
    <type>Text</type>
</CustomField>