force-app/main/default/objects/Person_Communication__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This contains the Type of contact information</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SocialMedia</fullName>
                <label>Social Media</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>