force-app/main/default/objects/Person_Communication__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This contains the detailed information for the corresponding Type and Subtype</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>